Added session authentication

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,11 @@
-# DB_HOST=
-# DB_PORT=
-# DB_DATABASE=
-# DB_USERNAME=
-# DB_PASSWORD=
+DB_HOST=
+DB_PORT=
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
 
 SERVER_PORT=
 IS_PRODUCTION=
+
+JWT_SECRET_KEY=
+JWT_SCHEME=
