--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
         "@nestjs/common": "^7.6.15",
         "@nestjs/core": "^7.6.15",
         "@nestjs/passport": "^7.1.5",
-        "@nestjs/platform-express": "^7.6.15",
+        "@nestjs/platform-express": "^7.6.18",
         "@nestjs/typeorm": "^7.1.5",
         "class-transformer": "^0.4.0",
         "class-validator": "^0.13.1",
         "connect-flash": "^0.1.1",
         "express-session": "^1.17.2",
         "hbs": "^4.1.2",
+        "multer": "^1.4.2",
         "mysql": "^2.18.1",
         "nestjs-admin": "^0.4.1",
         "passport-local": "^1.0.0",
