--- a/package.json
+++ b/package.json
@@ -20,14 +20,22 @@
         "test:e2e": "jest --config ./test/jest-e2e.json"
     },
     "dependencies": {
+        "@admin-bro/express": "^3.1.0",
+        "@admin-bro/nestjs": "^1.1.0",
+        "@admin-bro/typeorm": "^1.4.0",
         "@nestjs/common": "^7.6.15",
         "@nestjs/core": "^7.6.15",
         "@nestjs/passport": "^7.1.5",
         "@nestjs/platform-express": "^7.6.18",
         "@nestjs/typeorm": "^7.1.5",
+        "admin-bro": "^4.0.1",
+        "admin-bro-expressjs": "^2.1.1",
+        "admin-bro-typeorm": "^0.1.6-alpha.9",
         "class-transformer": "^0.4.0",
         "class-validator": "^0.13.1",
         "connect-flash": "^0.1.1",
+        "express": "^4.17.1",
+        "express-formidable": "^1.2.0",
         "express-session": "^1.17.2",
         "hbs": "^4.1.2",
         "multer": "^1.4.2",
@@ -46,6 +54,7 @@
         "@types/connect-flash": "0.0.36",
         "@types/express": "^4.17.11",
         "@types/express-session": "^1.17.3",
+        "@types/hbs": "^4.0.1",
         "@types/jest": "^26.0.22",
         "@types/node": "^14.14.36",
         "@types/passport-local": "^1.0.33",
