--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "axios": "^0.21.1",
-        "google-maps": "^4.3.3"
+        "axios": "^0.21.1"
     },
     "devDependencies": {
         "@babel/cli": "^7.14.3",
