Fixed package.json in frontend

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "uslugi-profi",
+    "name": "printer-frontend",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
