--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
         "test:watch": "jest --watch",
         "test:cov": "jest --coverage",
         "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-        "test:e2e": "jest --config ./test/jest-e2e.json"
+        "test:e2e": "jest --config ./test/jest-e2e.json",
+        "typeorm:migration:generate": "npx typeorm migration:generate -n",
+        "typeorm:migration:run": "npx typeorm migration:run"
     },
     "dependencies": {
         "@admin-bro/express": "^3.1.0",
