--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,13 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "axios": "^0.21.1"
+        "axios": "^0.21.1",
+        "md5": "^2.3.0"
     },
     "devDependencies": {
         "@babel/cli": "^7.14.3",
         "@babel/core": "^7.14.3",
+        "@types/md5": "^2.3.0",
         "@types/webpack": "^5.28.0",
         "babel-loader": "^8.2.2",
         "copy-webpack-plugin": "^9.0.0",
