--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "typeorm:migration:generate": "npx typeorm migration:generate -n",
         "typeorm:migration:run": "npx typeorm migration:run",
         "typeorm:migration:revert": "npx typeorm migration:revert",
-        "makemigration": "npm run typeorm:migration:generate",
+        "makemigration": "npm run build && npm run typeorm:migration:generate",
         "migrate": "npm run build && npm run typeorm:migration:run",
         "dropmigration": "npm run typeorm:migration:revert"
     },
