--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
         "typeorm:migration:run": "npx typeorm migration:run",
         "typeorm:migration:revert": "npx typeorm migration:revert",
         "makemigration": "npm run build && npm run typeorm:migration:generate",
-        "migrate": "npm run typeorm:migration:run",
+        "migrate": "npm run build && npm run typeorm:migration:run",
         "dropmigration": "npm run typeorm:migration:revert"
     },
     "dependencies": {
